# crates/quest/openapi.json
@@ -3694,7 +3694,7 @@
       },
       "Profile": {
         "type": "object",
-        "required": ["andrew_id", "anonymous", "created_at"],
+        "required": ["andrew_id", "player", "anonymous", "created_at"],
         "properties": {
           "andrew_id": {
             "type": "string"
@@ -3707,6 +3707,9 @@
           },
           "dorm": {
             "type": ["string", "null"]
+          },
+          "player": {
+            "type": "boolean"
           }
         }
       },
